--- a/index.html
+++ b/index.html
@@ -1183,7 +1183,7 @@
             emojis.forEach(emoji => {
                 const emojiElement = document.createElement('div');
                 emojiElement.className = 'emoji-option';
-                emojiElement.textContent = emji;
+                emojiElement.textContent = emoji;
                 emojiElement.title = emoji;
                 emojiElement.addEventListener('click', () => {
                     document.querySelectorAll('.emoji-option').forEach(el => {
@@ -1727,3 +1727,4 @@
     </script>
 </body>
 </html>
+
