--- a/index.html
+++ b/index.html
@@ -829,11 +829,11 @@
             <div class="password-box">
                 
                 
-                <input type="password" id="passwordInput" placeholder="Şifre" autocomplete="off">
+                <input type="password" id="passwordInput" placeholder="" autocomplete="off">
                 <div class="error-message" id="passwordError">Lütfen tekrar deneyin.</div>
-                <button id="submitPassword">Giriş</button>
-                <p style="color: var(--text-secondary); font-size: 0.8rem; margin-top: 20px;">
-                    <i class="fas fa-info-circle">12343</i> 
+                <!--<button id="submitPassword">Giriş</button>-->
+                <p style="color: var(--text-secondary); font-size: 0.3rem; margin-top: 2px;">
+                   <!-- <i class="fas fa-info-circle">12343</i> -->
                 </p>
             </div>
         </div>
@@ -1747,4 +1747,5 @@
     </script>
 </body>
 </html>
+
 
