--- a/index.html
+++ b/index.html
@@ -831,7 +831,7 @@
                 
                 <input type="password" id="passwordInput" placeholder="" autocomplete="off">
                 <div class="error-message" id="passwordError">Lütfen tekrar deneyin.</div>
-                <!--<button id="submitPassword">Giriş</button>-->
+                <button id="submitPassword">Giriş</button>
                 <p style="color: var(--text-secondary); font-size: 0.3rem; margin-top: 2px;">
                    <!-- <i class="fas fa-info-circle">12343</i> -->
                 </p>
@@ -1747,5 +1747,6 @@
     </script>
 </body>
 </html>
+
 
 
