--- a/index.html
+++ b/index.html
@@ -945,7 +945,7 @@
             
             <div class="form-group">
                 <label for="profileImageInput"><i class="fas fa-image"></i> Profil Resmi URL</label>
-                <input type="text" id="profileImageInput" class="form-control" placeholder="https://example.com/resmim.jpg" value="https://images.unsplash.com/photo-1605511004036-2237612ab7c0?q=80&amp;w=688&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <input type="text" id="profileImageInput" class="form-control" placeholder="https://example.com/resmim.jpg" value="">
                 <small style="color: var(--text-secondary); display: block; margin-top: 8px;">
                     İnternetteki bir resmin linkini yapıştırın
                 </small>
@@ -954,7 +954,7 @@
             <!-- GÜNCELLENDİ: PROFİL BÖLÜMÜ ARKA PLAN URL ALANI -->
             <div class="form-group">
                 <label for="profileBackgroundInput"><i class="fas fa-paint-brush"></i> Profil Bölümü Arka Plan URL</label>
-                <input type="text" id="profileBackgroundInput" class="form-control" placeholder="https://example.com/arkaplan.jpg" value="https://images.unsplash.com/photo-1707343848552-893e05dba6ac?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+                <input type="text" id="profileBackgroundInput" class="form-control" placeholder="https://example.com/arkaplan.jpg" value="">
                 <small style="color: var(--text-secondary); display: block; margin-top: 8px;">
                     Profil bölümü için bir arka plan resmi linki yapıştırın (flu olmayacak)
                 </small>
@@ -1838,6 +1838,7 @@
     </script>
 </body>
 </html>
+
 
 
 
