--- a/index.html
+++ b/index.html
@@ -1196,8 +1196,8 @@
                 await setDoc(profileRef, {
                     name: "esahin",
                     bio: "Mini Bio'ma hoşgeldiniz...",
-                    image: "https://images.unsplash.com/photo-1605511004036-2237612ab7c0?q=80&w=688&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
-                    profileBackground: "https://images.unsplash.com/photo-1707343848552-893e05dba6ac?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D",
+                    image: "",
+                    profileBackground: "",
                     background: "",
                     updatedAt: new Date()
                 });
@@ -1838,6 +1838,7 @@
     </script>
 </body>
 </html>
+
 
 
 
