--- a/index.html
+++ b/index.html
@@ -892,9 +892,9 @@
     <div class="container">
         <!-- LİNK SAYFASI -->
         <div class="link-page" id="linkPage">
-            <div class="profile-section" id="profileSection" style="background-image: url('https://images.unsplash.com/photo-1707343848552-893e05dba6ac?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');">
+            <div class="profile-section" id="profileSection" style="background-image: url('');">
                 <div class="profile-img-container" id="profileImageContainer" title="Yönetim paneline giriş için 3 kez tıklayın">
-                    <img src="https://images.unsplash.com/photo-1605511004036-2237612ab7c0?q=80&amp;w=688&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Profil Resmi" class="profile-img" id="profileImage">
+                    <img src="" alt="Profil Resmi" class="profile-img" id="profileImage">
                 </div>
                 <h1 id="profileName">esahin</h1>
                 <p class="bio" id="profileBio">Mini Bio'ma hoşgeldiniz...</p>
@@ -1838,6 +1838,7 @@
     </script>
 </body>
 </html>
+
 
 
 
