--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
         <div class="link-page" id="linkPage">
             <div class="profile-section" id="profileSection" style="background-image: url('');">
                 <div class="profile-img-container" id="profileImageContainer" title="Yönetim paneline giriş için 3 kez tıklayın">
-                    <img src="" alt="Profil Resmi" class="profile-img" id="profileImage">
+                    <img src="" alt="Bekleyiniz..." class="profile-img" id="profileImage">
                 </div>
                 <h1 id="profileName">esahin</h1>
                 <p class="bio" id="profileBio">Mini Bio'ma hoşgeldiniz...</p>
@@ -1838,6 +1838,7 @@
     </script>
 </body>
 </html>
+
 
 
 
