--- a/index.html
+++ b/index.html
@@ -587,9 +587,9 @@
             color: #ffc107;
         }
 
-        /* RESPONSIVE TASARIM GELİŞTİRMELERİ */
-        
-      /* ========== TABLET & MOBİL – KOMPAKT TASARIM ========== */
+       /* RESPONSIVE TASARIM GELİŞTİRMELERİ */
+
+/* ========== TABLET & MOBİL – KOMPAKT TASARIM ========== */
 @media (max-width: 768px) {
     body {
         padding: 12px;
@@ -636,6 +636,10 @@
     .link-item {
         padding: 14px 18px;
         border-radius: 16px;
+        transition: transform 0.25s cubic-bezier(0.2, 0.9, 0.4, 1),
+                    box-shadow 0.3s ease,
+                    background 0.2s ease;
+        -webkit-tap-highlight-color: transparent;
     }
 
     .link-icon {
@@ -651,6 +655,20 @@
 
     .link-url {
         font-size: 0.8rem;
+    }
+
+    /* 📱 MOBİL DOKUNMA EFEKTİ – PROFESYONEL */
+    .link-item:active {
+        transform: scale(0.97);
+        background: rgba(124, 58, 237, 0.08);
+        box-shadow: 0 8px 20px rgba(124, 58, 237, 0.25);
+        border-color: var(--accent);
+    }
+
+    .link-item:focus {
+        outline: none;
+        background: rgba(124, 58, 237, 0.05);
+        border-color: rgba(124, 58, 237, 0.5);
     }
 
     /* 🛠️ YÖNETİM PANELİ */
@@ -777,6 +795,10 @@
     .link-item {
         padding: 12px 14px;
         border-radius: 14px;
+        transition: transform 0.25s cubic-bezier(0.2, 0.9, 0.4, 1),
+                    box-shadow 0.3s ease,
+                    background 0.2s ease;
+        -webkit-tap-highlight-color: transparent;
     }
 
     .link-icon {
@@ -791,6 +813,20 @@
 
     .link-url {
         font-size: 0.7rem;
+    }
+
+    /* 📱 MOBİL DOKUNMA EFEKTİ – 480PX */
+    .link-item:active {
+        transform: scale(0.96);
+        background: rgba(124, 58, 237, 0.08);
+        box-shadow: 0 8px 18px rgba(124, 58, 237, 0.25);
+        border-color: var(--accent);
+    }
+
+    .link-item:focus {
+        outline: none;
+        background: rgba(124, 58, 237, 0.05);
+        border-color: rgba(124, 58, 237, 0.5);
     }
 
     .admin-panel h2 {
@@ -1838,6 +1874,7 @@
     </script>
 </body>
 </html>
+
 
 
 
