--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
             </div>
             
             <div class="footer" style="color: var(--text-secondary); font-size: 0.9rem; opacity: 0.8;">
-                <p>© 2024 • Tüm bağlantılar güncel tutulmaktadır</p>
+                <p>© esahin Mini Bio</p>
             </div>
         </div>
         
@@ -1874,6 +1874,7 @@
     </script>
 </body>
 </html>
+
 
 
 
