--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                     <img src="" alt="Bekleyiniz..." class="profile-img" id="profileImage">
                 </div>
                 <h1 id="profileName">esahin</h1>
-                <p class="bio" id="profileBio">Mini Bio'ma hoşgeldiniz...</p>
+                <p class="bio" id="profileBio">...Sevgiliye özel Mini Bio...</p>
             </div>
             
             <div class="links-container" id="linksContainer">
@@ -1766,6 +1766,7 @@ function initTheme() {
     </script>
 </body>
 </html>
+
 
 
 
