--- a/index.html
+++ b/index.html
@@ -801,7 +801,7 @@
             </div>
             
             <div class="footer" style="color: var(--text-secondary); font-size: 0.9rem; opacity: 0.8;">
-                <p>© esahin o</p>
+                <p>© esahin Bio</p>
             </div>
         </div>
         
@@ -1766,6 +1766,7 @@ function initTheme() {
     </script>
 </body>
 </html>
+
 
 
 
